--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
                     <div class="content">
                         <h1>Аспирантура</h1>
                         <p><a href="menu_1.html">Раздел аспирантуры</a></p>
-                        <p><a href="priem-v-aspiranturu.html">Приём в аспирантуру</a></p>
+                        <p><a href="priem-v-aspiranturu.html">Приём в&nbsp;аспирантуру</a></p>
+                        <p><a href="priem-v-aspiranturu-1.html">Приём в&nbsp;аспирантуру. Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП</a></p>
+                        <p><a href="priem-v-aspiranturu-2.html">Приём в&nbsp;аспирантуру. Особенности приема в&nbsp;аспирантуру в&nbsp;2025 году</a></p>
                         <p><a href="applicant.html">Соискателям</a></p>
                     </div>
                     <!-- content END -->
