--- a/priem-v-aspiranturu-1.html
+++ b/priem-v-aspiranturu-1.html
@@ -358,19 +358,97 @@
                 <div class="container">
 <div class="breadcrumbs"><a href="/" title="РИЭПП">РИЭПП</a> -&gt; <a href="/postgraduate-study/" title="Образование">Образование</a> -&gt; Аспирантура</div>                    <!-- content -->
                     <div class="content">
-					   <h1>Аспирантура</h1>
+					   <h1>Правила приема в&nbsp;аспирантуру ФГБУ РИЭПП</h1>
 
-                        <div class="postgraduate-sections">
-                            <a href="https://riep.ru/postgraduate-study/education.php"><span>Программа обучения</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/postgraduate-study/priem-v-aspiranturu.php"><span>Прием в&nbsp;аспирантуру</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/postgraduate-study/applicant.php"><span>Соискателям</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/about/docs/Научные%20рук-ли%20(Аспирантура%20РИЭПП)%202025-26%20(3).pdf"><span>Список научных руководителей</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                        <div class="postgraduate-text">
+                            <h2>Краткая информация о&nbsp;приеме в&nbsp;аспирантуру</h2>
+                            <div class="postgraduate-admission-block-link"><a href="#"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП.pdf</span></a></div>
+                            <ul>
+                                <li>К&nbsp;освоению программ подготовки научных и&nbsp;научно-педагогических кадров в&nbsp;аспирантуре допускаются лица, имеющие образование не&nbsp;ниже высшего (специалитет, магистратура).</li>
+                                <li>Срок обучения в&nbsp;аспирантуре составляет 3&nbsp;года.</li>
+                                <li>Для каждого вступительного испытания устанавливается минимальное количество баллов, подтверждающее его успешное прохождение. Результаты всех вступительных испытаний оцениваются по&nbsp;100-балльной шкале.</li>
+                                <li>Поступающие на&nbsp;обучение в&nbsp;аспирантуру вправе представить сведения о&nbsp;своих индивидуальных достижениях, результаты которых учитываются при приеме на&nbsp;обучение.</li>
+                                <li>Поступающий (законный представитель) имеет право подать в&nbsp;апелляционную комиссию апелляцию о&nbsp;нарушении, по&nbsp;мнению поступающего, установленного порядка проведения вступительного испытания&nbsp;и (или) о&nbsp;несогласии с&nbsp;полученной оценкой результатов вступительного испытания.</li>
+                            </ul>
+                            <h2>Для приема на&nbsp;обучение поступающие представляют:</h2>
+                            <ol>
+                                <li><a href="#">Заявление</a> о&nbsp;допуске к&nbsp;вступительным испытаниям;</li>
+                                <li><a href="#">Согласие</a> на&nbsp;обработку персональных данных;</li>
+                                <li>Паспорт;</li>
+                                <li>Документ об&nbsp;образовании (диплом специалиста, магистра);</li>
+                                <li>СНИЛС (при наличии);</li>
+                                <li>При необходимости создания для поступающего специальных условий, предоставляется документ, подтверждающий инвалидность;</li>
+                                <li>Документы, подтверждающие индивидуальные достижения поступающего (представляются по&nbsp;усмотрению поступающего);</li>
+                                <li>Две фотографии поступающего (3&times;4);</li>
+                                <li>Иные документы по&nbsp;усмотрению поступающего.</li>
+                            </ol>
+                            <h2>Способы представления или направления документов</h2>
+                            <ol>
+                                <li>Лично поступающим или его законным представителем в&nbsp;приемную комиссию РИЭПП по&nbsp;месту нахождения Института (г.&nbsp;Москва, ул.&nbsp;Добролюбова, д.&nbsp;20А);</li>
+                                <li>Через Госуслуги, сервис &laquo;Поступление в&nbsp;ВУЗ он-лайн&raquo;;</li>
+                                <li>Через операторов почтовой связи общего пользования;</li>
+                                <li>В&nbsp;электронной форме в&nbsp;виде электронных образов, то&nbsp;есть документов на&nbsp;бумажном носителе, преобразованных в&nbsp;электронную форму путем сканирования или фотографирования с&nbsp;обеспечением машиночитаемого распознавания его реквизитов посредством электронной информационной системы организации, на&nbsp;адрес электронной почты РИЭПП edu@riep.&nbsp;ru.</li>
+                            </ol>
                         </div>
 
-                        <div class="postgraduate-sections-video">
-                            <iframe width="100%" height="405" src="https://rutube.ru/play/embed/2730f74320df77aeb2bc0a752e423c25/?p=QajQPq1hWSf3YVESGW_NZw" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                        <div class="postgraduate-contacts">
+                            <div class="postgraduate-contacts-text">
+                                <div class="postgraduate-contacts-title">Адрес приемной комиссии</div>
+                                <div class="postgraduate-contacts-address">127254, г.&nbsp;Москва, ул.&nbsp;Добролюбова, д.&nbsp;20А</div>
+                            </div>
+                            <div class="postgraduate-contacts-content">
+                                <div class="postgraduate-contacts-block">
+                                    <div class="postgraduate-contacts-block-title">Тел.:</div>
+                                    <div class="postgraduate-contacts-block-content">
+                                        <div class="postgraduate-contacts-row"><a href="tel:+74959162628">+7 (495) 916-26-28</a></div>
+                                        <div class="postgraduate-contacts-row"><a href="tel:+74959172189">+7 (495) 917-21-89</a></div>
+                                        <div class="postgraduate-contacts-row"><a href="tel:+74959162884">+7 (495) 916-28-84</a></div>
+                                    </div>
+                                </div>
+                                <div class="postgraduate-contacts-block">
+                                    <div class="postgraduate-contacts-block-title">E-mail:</div>
+                                    <div class="postgraduate-contacts-block-content">
+                                        <div class="postgraduate-contacts-row"><a href="mailto:edu@riep.ru">edu@riep.ru</a></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
+                        <div class="postgraduate-btns">
+                            <a href="https://forms.yandex.ru/u/68b15cafeb6146170652329e" class="btn-1" target="_blank">Подать заявку</a>
+                            <a href="https://www.gosuslugi.ru/vuznavigator/universities/3019" class="btn-1" target="_blank">Госуслуги поступление в ВУЗ онлайн</a>
+                        </div>
+
+                        <div class="postgraduate-admission-blocks">
+
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Информация о&nbsp;необходимости (отсутствии необходимости) прохождения поступающими обязательного предварительного медицинского осмотра</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-descr">
+                                        <p>При поступлении в&nbsp;аспирантуру РИЭПП у&nbsp;поступающих нет необходимости прохождения обязательного предварительного медицинского осмотра (обследования).</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Информация о&nbsp;наличии общежитий</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-descr">
+                                        <p>При поступлении в&nbsp;аспирантуру РИЭПП у&nbsp;поступающих нет необходимости прохождения обязательного предварительного медицинского осмотра (обследования).</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Информация об&nbsp;особенностях проведения вступительных испытаний для лиц с&nbsp;ограниченными возможностями здоровья, инвалидов</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-descr">
+                                        <p>При поступлении в&nbsp;аспирантуру РИЭПП у&nbsp;поступающих нет необходимости прохождения обязательного предварительного медицинского осмотра (обследования).</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                     <!-- content END -->
 
