--- a/priem-v-aspiranturu.html
+++ b/priem-v-aspiranturu.html
@@ -359,129 +359,72 @@
 <div class="breadcrumbs"><a href="/" title="РИЭПП">РИЭПП</a> -&gt; <a href="/postgraduate-study/" title="Образование">Образование</a> -&gt; Аспирантура</div>                    <!-- content -->
                     <div class="content">
 					   <h1>Прием в аспирантуру</h1>
-<h3>При подаче заявления о приеме поступающий представляет</h3>
-<p>
-	 1) <a href="/aspirantura/priem/zayavlenie.pdf">заявление</a> о допуске к вступительным испытаниям;
-</p>
-<p>
-	 2) <a href="/aspirantura/priem/soglasie.pdf">согласие</a> на обработку персональных данных;
-</p>
-<p>
-	 3) паспорт;
-</p>
-<p>
-	 4) документ об образовании (диплом специалиста, магистра)
-</p>
-<p>
-	 5) СНИЛС (при наличии);
-</p>
-<p>
-	 6)&nbsp;при необходимости создания для поступающего специальных условий, предоставляется документ, подтверждающий инвалидность, позволяющий создание указанных условий:
-</p>
-<p>
-	 7)&nbsp;документы, подтверждающие индивидуальные достижения поступающего (представляются по усмотрению поступающего);
-</p>
-<p>
-	 8)&nbsp;две фотографии поступающего (3х4).
-</p>
-<h3>
-Способы представления или направления документов </h3>
-<p>
-	 1) представляются лично поступающим по месту нахождения Института (Москва, ул. Добролюбова, д. 20А);
-</p>
-<p>
-	 2) направляются через операторов почтовой связи общего пользования;
-</p>
-<p>
-	 3) направляются в электронной форме в виде электронных образов, то есть документов на бумажном носителе, преобразованных в электронную форму путем сканирования или фотографирования с обеспечением машиночитаемого распознавания его реквизитов посредством электронной информационной системы организации, используя адрес электронной почты <a href="mailto:edu@riep.ru">edu@riep.ru</a>.
-</p>
-<h2>Программы вступительных испытаний<br>
- </h2>
-<p>
- <a href="/aspirantura/priem/inostrannii_yazik.pdf">Иностранный язык</a>
-</p>
-<p>
- <a href="/aspirantura/priem/filosofiya.pdf">Философия</a>
-</p>
-<p>
- <a href="/aspirantura/priem/spec_discipl_regionalnaya_ekonomika.pdf">Спец. дисципл. Региональная экономика</a>
-</p>
-<p>
-</p>
 
- <br>
- <br>
+                        <div class="postgraduate-admission-sections">
+                            <a href="#"><span>Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                            <a href="#"><span>Особенности приема в&nbsp;аспирантуру в&nbsp;2025&nbsp;году</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                        </div>
 
-<a href="https://www.gosuslugi.ru/vuznavigator/universities/3019" target=_blank class="btn-1"  style="width: 350px; float:right; ">Суперсервис портала Госуслуг</a>
+                        <div class="postgraduate-admission-blocks">
 
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Стоимость приема в&nbsp;аспирантуру в&nbsp;2025</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-block-link"><a href="#"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Об&nbsp;установлении стоимости обучения в&nbsp;аспирантуре в&nbsp;РИЭПП в&nbsp;2025&nbsp;г.pdf</span></a></div>
+                                    <div class="postgraduate-admission-price">
+                                        <div class="postgraduate-admission-price-inner">
+                                            <div class="postgraduate-admission-price-item">
+                                                <div class="postgraduate-admission-price-item-title">Наименование группы научных специальностей</div>
+                                                <div class="postgraduate-admission-price-item-value">5.2. Экономика</div>
+                                            </div>
+                                            <div class="postgraduate-admission-price-item">
+                                                <div class="postgraduate-admission-price-item-title">Научная<br> специальность</div>
+                                                <div class="postgraduate-admission-price-item-value">5.2.3. Региональная и&nbsp;отраслевая экономика</div>
+                                            </div>
+                                            <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
+                                                <div class="postgraduate-admission-price-item-title">Количество<br> мест</div>
+                                                <div class="postgraduate-admission-price-item-value">10</div>
+                                            </div>
+                                            <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
+                                                <div class="postgraduate-admission-price-item-title">Стоимость обучения<br> на&nbsp;2025/2026&nbsp;уч.&nbsp;год</div>
+                                                <div class="postgraduate-admission-price-item-value">419 261,00 руб.</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-<div class="webinars-forms" style="margin-top:0px">
-	<div class="webinars-forms-menu">
-		<ul>
-			<li><a href="#" class="btn-1">Подать заявку</a></li>
-		</ul>
-	</div>
-	<div class="webinars-form">
-		<div class="webinar-q-res">
-		</div>
-		<form action="quest.php" id="webinar-quest" method="post">
- <input name="captcha_code" class="captchaSid" value="0ae9ec82ef3db0eb9e90034ed93f377f" type="hidden">
-			<div class="form-row">
-				<div class="form-label">
-					 ФИО полностью *
-				</div>
-				<div class="form-input">
- <input type="text" name="name" value="" class="required">
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-label">
-					 Телефон *:
-				</div>
-				<div class="form-input">
- <input type="text" name="phone" value="" class="required">
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-label">
-					 Электронная почта *:
-				</div>
-				<div class="form-input">
- <input type="text" name="email" value="" class="email required">
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-label">
-					 Сообщение
-				</div>
-				<div class="form-input">
- <textarea name="comment" rows="5" cols="10"></textarea>
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-label">
-					 Введите код с картинки *
-					<div>
- <img src="/bitrix/tools/captcha.php?captcha_code=0ae9ec82ef3db0eb9e90034ed93f377f" class="captchaImg">
-					</div>
- <a class="captcha-link reloadCaptcha" href="#">Поменять картинку</a>
-				</div>
-				<div class="form-input">
- <input type="text" name="captcha_word" id="captcha_word" class="required">
-				</div>
-			</div>
-			<div class="feedback-ctrl">
-				<div class="form-checkbox">
- <label><input type="checkbox" name="comfirm" class="required"><span>Даю согласие на обработку персональных данных <em>*</em></span> (<a href="http://riep.ru/confidencial/" target="_blank">посмотреть условия</a>)</label>
-				</div>
-				<div class="form-submit">
- <input type="submit" value="Отправить" class="btn-1">
-				</div>
-			</div>
-		</form>
-	</div>
-</div>
-&nbsp;                    </div>
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Правила подачи и&nbsp;рассмотрения апелляций по&nbsp;результатам вступительных испытаний</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-block-link"><a href="#" target="_blank"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-extlink"></use></svg><span>Положение об&nbsp;апелляционной комиссии РИЭПП</span></a></div>
+                                    <div class="postgraduate-admission-descr">
+                                        <p>Поступающий (или его законный представитель) имеет право подать в&nbsp;апелляционную комиссию РИЭПП апелляцию о&nbsp;нарушении, по&nbsp;мнению поступающего, установленного порядка проведения вступительного испытания&nbsp;и (или) о&nbsp;несогласии с&nbsp;полученной оценкой результатов вступительного испытания.</p>
+                                        <p><strong>Апелляция подается в&nbsp;день объявления результатов вступительного испытания или в&nbsp;течение следующего рабочего дня.</strong></p>
+                                        <p><strong>Рассмотрение апелляции проводится не&nbsp;позднее следующего рабочего дня после дня ее&nbsp;подачи.</strong></p>
+                                        <p>После рассмотрения апелляции апелляционная комиссия принимает решение об&nbsp;изменении оценки результатов вступительного испытания или оставлении указанной оценки без изменения. Оформленное протоколом решение апелляционной комиссии доводится до&nbsp;сведения поступающего (законного представителя), ознакомление с&nbsp;решением апелляционной комиссии заверяется подписью поступающего (законного представителя).</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="postgraduate-admission-block">
+                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Программа вступительных испытаний</span></div>
+                                <div class="postgraduate-admission-block-content">
+                                    <div class="postgraduate-admission-programms">
+                                        <a href="/aspirantura/priem/inostrannii_yazik.pdf"><span>Иностранный язык</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                        <a href="/aspirantura/priem/filosofiya.pdf"><span>Философия</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                        <a href="/aspirantura/priem/spec_discipl_regionalnaya_ekonomika.pdf"><span>Спец. дисциплина<br> Региональная экономика</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="postgraduate-btns">
+                            <a href="https://forms.yandex.ru/u/68b15cafeb6146170652329e" class="btn-1" target="_blank">Подать заявку</a>
+                        </div>
+
+                    </div>
                     <!-- content END -->
 
                 </div>
