--- a/priem-v-aspiranturu.html
+++ b/priem-v-aspiranturu.html
@@ -358,71 +358,75 @@
                 <div class="container">
 <div class="breadcrumbs"><a href="/" title="РИЭПП">РИЭПП</a> -&gt; <a href="/postgraduate-study/" title="Образование">Образование</a> -&gt; Аспирантура</div>                    <!-- content -->
                     <div class="content">
-					   <h1>Прием в аспирантуру</h1>
+                        <!-- content postgraduate -->
+                        <div class="content-postgraduate">
+                            <h1>Прием в аспирантуру</h1>
 
-                        <div class="postgraduate-admission-sections">
-                            <a href="#"><span>Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="#"><span>Особенности приема в&nbsp;аспирантуру в&nbsp;2025&nbsp;году</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                        </div>
+                            <div class="postgraduate-admission-sections">
+                                <a href="#"><span>Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                <a href="#"><span>Особенности приема в&nbsp;аспирантуру в&nbsp;2025&nbsp;году</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                            </div>
 
-                        <div class="postgraduate-admission-blocks">
+                            <div class="postgraduate-admission-blocks">
 
-                            <div class="postgraduate-admission-block">
-                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Стоимость приема в&nbsp;аспирантуру в&nbsp;2025</span></div>
-                                <div class="postgraduate-admission-block-content">
-                                    <div class="postgraduate-admission-block-link"><a href="#"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Об&nbsp;установлении стоимости обучения в&nbsp;аспирантуре в&nbsp;РИЭПП в&nbsp;2025&nbsp;г.pdf</span></a></div>
-                                    <div class="postgraduate-admission-price">
-                                        <div class="postgraduate-admission-price-inner">
-                                            <div class="postgraduate-admission-price-item">
-                                                <div class="postgraduate-admission-price-item-title">Наименование группы научных специальностей</div>
-                                                <div class="postgraduate-admission-price-item-value">5.2. Экономика</div>
-                                            </div>
-                                            <div class="postgraduate-admission-price-item">
-                                                <div class="postgraduate-admission-price-item-title">Научная<br> специальность</div>
-                                                <div class="postgraduate-admission-price-item-value">5.2.3. Региональная и&nbsp;отраслевая экономика</div>
-                                            </div>
-                                            <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
-                                                <div class="postgraduate-admission-price-item-title">Количество<br> мест</div>
-                                                <div class="postgraduate-admission-price-item-value">10</div>
-                                            </div>
-                                            <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
-                                                <div class="postgraduate-admission-price-item-title">Стоимость обучения<br> на&nbsp;2025/2026&nbsp;уч.&nbsp;год</div>
-                                                <div class="postgraduate-admission-price-item-value">419 261,00 руб.</div>
+                                <div class="postgraduate-admission-block">
+                                    <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Стоимость приема в&nbsp;аспирантуру в&nbsp;2025</span></div>
+                                    <div class="postgraduate-admission-block-content">
+                                        <div class="postgraduate-admission-block-link"><a href="#"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Об&nbsp;установлении стоимости обучения в&nbsp;аспирантуре в&nbsp;РИЭПП в&nbsp;2025&nbsp;г.pdf</span></a></div>
+                                        <div class="postgraduate-admission-price">
+                                            <div class="postgraduate-admission-price-inner">
+                                                <div class="postgraduate-admission-price-item">
+                                                    <div class="postgraduate-admission-price-item-title">Наименование группы научных специальностей</div>
+                                                    <div class="postgraduate-admission-price-item-value">5.2. Экономика</div>
+                                                </div>
+                                                <div class="postgraduate-admission-price-item">
+                                                    <div class="postgraduate-admission-price-item-title">Научная<br> специальность</div>
+                                                    <div class="postgraduate-admission-price-item-value">5.2.3. Региональная и&nbsp;отраслевая экономика</div>
+                                                </div>
+                                                <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
+                                                    <div class="postgraduate-admission-price-item-title">Количество<br> мест</div>
+                                                    <div class="postgraduate-admission-price-item-value">10</div>
+                                                </div>
+                                                <div class="postgraduate-admission-price-item postgraduate-admission-price-item-center">
+                                                    <div class="postgraduate-admission-price-item-title">Стоимость обучения<br> на&nbsp;2025/2026&nbsp;уч.&nbsp;год</div>
+                                                    <div class="postgraduate-admission-price-item-value">419 261,00 руб.</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="postgraduate-admission-block">
-                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Правила подачи и&nbsp;рассмотрения апелляций по&nbsp;результатам вступительных испытаний</span></div>
-                                <div class="postgraduate-admission-block-content">
-                                    <div class="postgraduate-admission-block-link"><a href="#" target="_blank"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-extlink"></use></svg><span>Положение об&nbsp;апелляционной комиссии РИЭПП</span></a></div>
-                                    <div class="postgraduate-admission-descr">
-                                        <p>Поступающий (или его законный представитель) имеет право подать в&nbsp;апелляционную комиссию РИЭПП апелляцию о&nbsp;нарушении, по&nbsp;мнению поступающего, установленного порядка проведения вступительного испытания&nbsp;и (или) о&nbsp;несогласии с&nbsp;полученной оценкой результатов вступительного испытания.</p>
-                                        <p><strong>Апелляция подается в&nbsp;день объявления результатов вступительного испытания или в&nbsp;течение следующего рабочего дня.</strong></p>
-                                        <p><strong>Рассмотрение апелляции проводится не&nbsp;позднее следующего рабочего дня после дня ее&nbsp;подачи.</strong></p>
-                                        <p>После рассмотрения апелляции апелляционная комиссия принимает решение об&nbsp;изменении оценки результатов вступительного испытания или оставлении указанной оценки без изменения. Оформленное протоколом решение апелляционной комиссии доводится до&nbsp;сведения поступающего (законного представителя), ознакомление с&nbsp;решением апелляционной комиссии заверяется подписью поступающего (законного представителя).</p>
+                                <div class="postgraduate-admission-block">
+                                    <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Правила подачи и&nbsp;рассмотрения апелляций по&nbsp;результатам вступительных испытаний</span></div>
+                                    <div class="postgraduate-admission-block-content">
+                                        <div class="postgraduate-admission-block-link"><a href="#" target="_blank"><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-extlink"></use></svg><span>Положение об&nbsp;апелляционной комиссии РИЭПП</span></a></div>
+                                        <div class="postgraduate-admission-descr">
+                                            <p>Поступающий (или его законный представитель) имеет право подать в&nbsp;апелляционную комиссию РИЭПП апелляцию о&nbsp;нарушении, по&nbsp;мнению поступающего, установленного порядка проведения вступительного испытания&nbsp;и (или) о&nbsp;несогласии с&nbsp;полученной оценкой результатов вступительного испытания.</p>
+                                            <p><strong>Апелляция подается в&nbsp;день объявления результатов вступительного испытания или в&nbsp;течение следующего рабочего дня.</strong></p>
+                                            <p><strong>Рассмотрение апелляции проводится не&nbsp;позднее следующего рабочего дня после дня ее&nbsp;подачи.</strong></p>
+                                            <p>После рассмотрения апелляции апелляционная комиссия принимает решение об&nbsp;изменении оценки результатов вступительного испытания или оставлении указанной оценки без изменения. Оформленное протоколом решение апелляционной комиссии доводится до&nbsp;сведения поступающего (законного представителя), ознакомление с&nbsp;решением апелляционной комиссии заверяется подписью поступающего (законного представителя).</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="postgraduate-admission-block">
-                                <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Программа вступительных испытаний</span></div>
-                                <div class="postgraduate-admission-block-content">
-                                    <div class="postgraduate-admission-programms">
-                                        <a href="/aspirantura/priem/inostrannii_yazik.pdf"><span>Иностранный язык</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                                        <a href="/aspirantura/priem/filosofiya.pdf"><span>Философия</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                                        <a href="/aspirantura/priem/spec_discipl_regionalnaya_ekonomika.pdf"><span>Спец. дисциплина<br> Региональная экономика</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                <div class="postgraduate-admission-block">
+                                    <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Программа вступительных испытаний</span></div>
+                                    <div class="postgraduate-admission-block-content">
+                                        <div class="postgraduate-admission-programms">
+                                            <a href="/aspirantura/priem/inostrannii_yazik.pdf"><span>Иностранный язык</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                            <a href="/aspirantura/priem/filosofiya.pdf"><span>Философия</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                            <a href="/aspirantura/priem/spec_discipl_regionalnaya_ekonomika.pdf"><span>Спец. дисциплина<br> Региональная экономика</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                        </div>
                                     </div>
                                 </div>
+
                             </div>
 
+                            <div class="postgraduate-btns">
+                                <a href="https://forms.yandex.ru/u/68b15cafeb6146170652329e" class="btn-1" target="_blank">Подать заявку</a>
+                            </div>
                         </div>
-
-                        <div class="postgraduate-btns">
-                            <a href="https://forms.yandex.ru/u/68b15cafeb6146170652329e" class="btn-1" target="_blank">Подать заявку</a>
-                        </div>
+                        <!-- content postgraduate END -->
 
                     </div>
                     <!-- content END -->
