--- a/applicant.html
+++ b/applicant.html
@@ -358,93 +358,97 @@
                 <div class="container">
 <div class="breadcrumbs"><a href="/" title="РИЭПП">РИЭПП</a> -&gt; <a href="/postgraduate-study/" title="Образование">Образование</a> -&gt; Аспирантура</div>                    <!-- content -->
                     <div class="content">
-					   <h1>Соискателям</h1>
+                        <!-- content postgraduate -->
+                        <div class="content-postgraduate">
+                            <h1>Соискателям</h1>
+                            <p>РИЭПП предоставляет услугу по&nbsp;прикреплению к&nbsp;РИЭПП на&nbsp;платной основе лиц, имеющих высшее образование (магистратура или специалитет), на&nbsp;соискание ученой степени кандидата наук без освоения программы подготовки научных и&nbsp;научно-педагогических кадров в&nbsp;аспирантуре по&nbsp;научной специальности <strong>5.2.3.&nbsp;Региональная и&nbsp;отраслевая экономика</strong>.</p>
 
-                        <p>РИЭПП предоставляет услугу по&nbsp;прикреплению к&nbsp;РИЭПП на&nbsp;платной основе лиц, имеющих высшее образование (магистратура или специалитет), на&nbsp;соискание ученой степени кандидата наук без освоения программы подготовки научных и&nbsp;научно-педагогических кадров в&nbsp;аспирантуре по&nbsp;научной специальности <strong>5.2.3.&nbsp;Региональная и&nbsp;отраслевая экономика</strong>.</p>
-                        <div class="postgraduate-text">
-                            <h2>О&nbsp;прикреплении соискателей</h2>
-                            <div class="postgraduate-admission-block-link"><a href="#" download><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Положение о&nbsp;прикреплении соискателей для защиты диссертации</span></a></div>
-                            <div class="postgraduate-admission-block-link"><a href="#" download><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Положение о&nbsp;прикреплении соискателей для сдачи кандидатских экзаменов</span></a></div>
-                            <p><strong>Прием документов</strong> для желающих прикрепиться на&nbsp;договорной основе для подготовки диссертации на&nbsp;соискание ученой степени кандидата наук без освоения программ подготовки научных и&nbsp;научно-педагогических кадров <strong>осуществляется в&nbsp;течение всего года</strong>.</p>
-                            <h2>Прикрепляющиеся лица представляют в&nbsp;РИЭПП:</h2>
+                            <div class="postgraduate-text">
+                                <h2>О&nbsp;прикреплении соискателей</h2>
+                                <div class="postgraduate-admission-block-link"><a href="#" download><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Положение о&nbsp;прикреплении соискателей для защиты диссертации</span></a></div>
+                                <div class="postgraduate-admission-block-link"><a href="#" download><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-download"></use></svg><span>Положение о&nbsp;прикреплении соискателей для сдачи кандидатских экзаменов</span></a></div>
+                                <p><strong>Прием документов</strong> для желающих прикрепиться на&nbsp;договорной основе для подготовки диссертации на&nbsp;соискание ученой степени кандидата наук без освоения программ подготовки научных и&nbsp;научно-педагогических кадров <strong>осуществляется в&nbsp;течение всего года</strong>.</p>
+                                <h2>Прикрепляющиеся лица представляют в&nbsp;РИЭПП:</h2>
 
-                            <div class="postgraduate-admission-blocks">
+                                <div class="postgraduate-admission-blocks">
 
-                                <div class="postgraduate-admission-block">
-                                    <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Для защиты диссертации:</span></div>
-                                    <div class="postgraduate-admission-block-content">
-                                        <div class="postgraduate-admission-descr">
-                                            <ol>
-                                                <li><a href="#">Заявление</a> о&nbsp;прикреплении с&nbsp;указанием наименования и&nbsp;шифра специальности, контактной информации и&nbsp;способов связи;</li>
-                                                <li><a href="#">Согласие</a> на&nbsp;обработку персональных данных;</li>
-                                                <li>Копия паспорта;</li>
-                                                <li>Копия документа об&nbsp;образовании (диплом специалиста, магистра);</li>
-                                                <li>Копия СНИЛС (при наличии);</li>
-                                                <li>Документы, подтверждающие индивидуальные достижения поступающего (список опубликованных, в&nbsp;том числе в&nbsp;соавторстве, научных работ, полученных патентов на&nbsp;изобретение, полезные модели, промышленные образцы, свидетельства о&nbsp;государственной регистрации программ для ЭВМ, баз данных, и.&nbsp;т.&nbsp;д.);</li>
-                                                <li>Две фотографии поступающего (3&times;4);</li>
-                                                <li>Иные документы по&nbsp;усмотрению поступающего.</li>
-                                            </ol>
+                                    <div class="postgraduate-admission-block">
+                                        <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Для защиты диссертации:</span></div>
+                                        <div class="postgraduate-admission-block-content">
+                                            <div class="postgraduate-admission-descr">
+                                                <ol>
+                                                    <li><a href="#">Заявление</a> о&nbsp;прикреплении с&nbsp;указанием наименования и&nbsp;шифра специальности, контактной информации и&nbsp;способов связи;</li>
+                                                    <li><a href="#">Согласие</a> на&nbsp;обработку персональных данных;</li>
+                                                    <li>Копия паспорта;</li>
+                                                    <li>Копия документа об&nbsp;образовании (диплом специалиста, магистра);</li>
+                                                    <li>Копия СНИЛС (при наличии);</li>
+                                                    <li>Документы, подтверждающие индивидуальные достижения поступающего (список опубликованных, в&nbsp;том числе в&nbsp;соавторстве, научных работ, полученных патентов на&nbsp;изобретение, полезные модели, промышленные образцы, свидетельства о&nbsp;государственной регистрации программ для ЭВМ, баз данных, и.&nbsp;т.&nbsp;д.);</li>
+                                                    <li>Две фотографии поступающего (3&times;4);</li>
+                                                    <li>Иные документы по&nbsp;усмотрению поступающего.</li>
+                                                </ol>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="postgraduate-admission-block">
-                                    <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Для сдачи кандидатских экзаменов:</span></div>
-                                    <div class="postgraduate-admission-block-content">
-                                        <div class="postgraduate-admission-descr">
-                                            <ol>
-                                                <li><a href="#">Заявление</a> о&nbsp;прикреплении с&nbsp;указанием наименования и&nbsp;шифра специальности, контактной информации и&nbsp;способов связи;</li>
-                                                <li><a href="#">Согласие</a> на&nbsp;обработку персональных данных;</li>
-                                                <li>Копия паспорта;</li>
-                                                <li>Копия документа об&nbsp;образовании (диплом специалиста, магистра);</li>
-                                                <li>Копия СНИЛС (при наличии);</li>
-                                                <li>Документ, подтверждающий сдачу прикрепляющимся лицом кандидатского(их) экзамена(ов) (при наличии).</li>
-                                            </ol>
+                                    <div class="postgraduate-admission-block">
+                                        <div class="postgraduate-admission-block-title"><strong><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow-2"></use></svg></strong><span>Для сдачи кандидатских экзаменов:</span></div>
+                                        <div class="postgraduate-admission-block-content">
+                                            <div class="postgraduate-admission-descr">
+                                                <ol>
+                                                    <li><a href="#">Заявление</a> о&nbsp;прикреплении с&nbsp;указанием наименования и&nbsp;шифра специальности, контактной информации и&nbsp;способов связи;</li>
+                                                    <li><a href="#">Согласие</a> на&nbsp;обработку персональных данных;</li>
+                                                    <li>Копия паспорта;</li>
+                                                    <li>Копия документа об&nbsp;образовании (диплом специалиста, магистра);</li>
+                                                    <li>Копия СНИЛС (при наличии);</li>
+                                                    <li>Документ, подтверждающий сдачу прикрепляющимся лицом кандидатского(их) экзамена(ов) (при наличии).</li>
+                                                </ol>
+                                            </div>
                                         </div>
                                     </div>
+
                                 </div>
 
-                            </div>
+                                <h2>Стоимость прикрепления в 2025 году</h2>
 
-                            <h2>Стоимость прикрепления в 2025 году</h2>
-
-                            <div class="postgraduate-attachments">
-                                <div class="postgraduate-attachments-headers">
-                                    <div class="postgraduate-attachments-header">Вариант прикрепления</div>
-                                    <div class="postgraduate-attachments-header">Стоимость, руб.</div>
-                                </div>
-                                <div class="postgraduate-attachments-table">
-                                    <div class="postgraduate-attachments-table-title">5.2.3. Региональная и&nbsp;отраслевая экономика</div>
-                                    <div class="postgraduate-attachments-table-groups">
-                                        <div class="postgraduate-attachments-table-group">
-                                            <div class="postgraduate-attachments-table-group-title">Для&nbsp;подготовки диссертации на&nbsp;соискание ученой степени кандидата наук без&nbsp;освоения программы</div>
-                                            <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>93 850</div>
-                                        </div>
-                                        <div class="postgraduate-attachments-table-group">
-                                            <div class="postgraduate-attachments-table-group-title">Для&nbsp;сдачи кандидатских экзаменов без&nbsp;освоения программы</div>
-                                            <div class="postgraduate-attachments-table-subgroups">
-                                                <div class="postgraduate-attachments-table-group">
-                                                    <div class="postgraduate-attachments-table-group-title">Иностранный язык</div>
-                                                    <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>15 600</div>
-                                                </div>
-                                                <div class="postgraduate-attachments-table-group">
-                                                    <div class="postgraduate-attachments-table-group-title">Философия</div>
-                                                    <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>15 600</div>
-                                                </div>
-                                                <div class="postgraduate-attachments-table-group">
-                                                    <div class="postgraduate-attachments-table-group-title">Региональная и&nbsp;отраслевая экономика</div>
-                                                    <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>17 200</div>
+                                <div class="postgraduate-attachments">
+                                    <div class="postgraduate-attachments-headers">
+                                        <div class="postgraduate-attachments-header">Вариант прикрепления</div>
+                                        <div class="postgraduate-attachments-header">Стоимость, руб.</div>
+                                    </div>
+                                    <div class="postgraduate-attachments-table">
+                                        <div class="postgraduate-attachments-table-title">5.2.3. Региональная и&nbsp;отраслевая экономика</div>
+                                        <div class="postgraduate-attachments-table-groups">
+                                            <div class="postgraduate-attachments-table-group">
+                                                <div class="postgraduate-attachments-table-group-title">Для&nbsp;подготовки диссертации на&nbsp;соискание ученой степени кандидата наук без&nbsp;освоения программы</div>
+                                                <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>93 850</div>
+                                            </div>
+                                            <div class="postgraduate-attachments-table-group">
+                                                <div class="postgraduate-attachments-table-group-title">Для&nbsp;сдачи кандидатских экзаменов без&nbsp;освоения программы</div>
+                                                <div class="postgraduate-attachments-table-subgroups">
+                                                    <div class="postgraduate-attachments-table-group">
+                                                        <div class="postgraduate-attachments-table-group-title">Иностранный язык</div>
+                                                        <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>15 600</div>
+                                                    </div>
+                                                    <div class="postgraduate-attachments-table-group">
+                                                        <div class="postgraduate-attachments-table-group-title">Философия</div>
+                                                        <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>15 600</div>
+                                                    </div>
+                                                    <div class="postgraduate-attachments-table-group">
+                                                        <div class="postgraduate-attachments-table-group-title">Региональная и&nbsp;отраслевая экономика</div>
+                                                        <div class="postgraduate-attachments-table-group-price"><div class="postgraduate-attachments-header-mobile">Стоимость, руб.</div>17 200</div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <p><strong>Прикрепление для подготовки диссертации на&nbsp;соискание ученой степени кандидата наук</strong> без освоения программы подготовки научных и&nbsp;научно-педагогических кадров в&nbsp;аспирантуре оформляется договором, в&nbsp;котором в&nbsp;том числе указываются условия и&nbsp;срок подготовки диссертации. Заключение договора возможно на&nbsp;срок до&nbsp;3-х лет.</p>
-                            <p><strong>Прикрепление для сдачи кандидатских экзаменов</strong> осуществляется путем зачисления прикрепляющихся лиц в&nbsp;штат РИЭПП.</p>
-                            <p>После получения подтверждения о&nbsp;прикреплении к&nbsp;РИЭПП для сдачи кандидатских экзаменов стороны заключают договор, где указываются сроки сдачи экзаменов и&nbsp;условия их&nbsp;проведения. Договор заключается на&nbsp;6&nbsp;месяцев.</p>
+                                <p><strong>Прикрепление для подготовки диссертации на&nbsp;соискание ученой степени кандидата наук</strong> без освоения программы подготовки научных и&nbsp;научно-педагогических кадров в&nbsp;аспирантуре оформляется договором, в&nbsp;котором в&nbsp;том числе указываются условия и&nbsp;срок подготовки диссертации. Заключение договора возможно на&nbsp;срок до&nbsp;3-х лет.</p>
+                                <p><strong>Прикрепление для сдачи кандидатских экзаменов</strong> осуществляется путем зачисления прикрепляющихся лиц в&nbsp;штат РИЭПП.</p>
+                                <p>После получения подтверждения о&nbsp;прикреплении к&nbsp;РИЭПП для сдачи кандидатских экзаменов стороны заключают договор, где указываются сроки сдачи экзаменов и&nbsp;условия их&nbsp;проведения. Договор заключается на&nbsp;6&nbsp;месяцев.</p>
+                            </div>
                         </div>
+                        <!-- content postgraduate END -->
                     </div>
                     <!-- content END -->
 
