--- a/menu_1.html
+++ b/menu_1.html
@@ -358,18 +358,22 @@
                 <div class="container">
 <div class="breadcrumbs"><a href="/" title="РИЭПП">РИЭПП</a> -&gt; <a href="/postgraduate-study/" title="Образование">Образование</a> -&gt; Аспирантура</div>                    <!-- content -->
                     <div class="content">
-					   <h1>Аспирантура</h1>
+                        <!-- content postgraduate -->
+                        <div class="content-postgraduate">
+                            <h1>Аспирантура</h1>
 
-                        <div class="postgraduate-sections">
-                            <a href="https://riep.ru/postgraduate-study/education.php"><span>Программа обучения</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/postgraduate-study/priem-v-aspiranturu.php"><span>Прием в&nbsp;аспирантуру</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/postgraduate-study/applicant.php"><span>Соискателям</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                            <a href="/about/docs/Научные%20рук-ли%20(Аспирантура%20РИЭПП)%202025-26%20(3).pdf"><span>Список научных руководителей</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
-                        </div>
+                            <div class="postgraduate-sections">
+                                <a href="https://riep.ru/postgraduate-study/education.php"><span>Программа обучения</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                <a href="/postgraduate-study/priem-v-aspiranturu.php"><span>Прием в&nbsp;аспирантуру</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                <a href="/postgraduate-study/applicant.php"><span>Соискателям</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                                <a href="/about/docs/Научные%20рук-ли%20(Аспирантура%20РИЭПП)%202025-26%20(3).pdf"><span>Список научных руководителей</span><svg><use xlink:href="bitrix/templates/riep_new/images/sprite.svg#postgraduate-icon-arrow"></use></svg></a>
+                            </div>
 
-                        <div class="postgraduate-sections-video">
-                            <iframe width="100%" height="405" src="https://rutube.ru/play/embed/2730f74320df77aeb2bc0a752e423c25/?p=QajQPq1hWSf3YVESGW_NZw" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            <div class="postgraduate-sections-video">
+                                <iframe width="100%" height="405" src="https://rutube.ru/play/embed/2730f74320df77aeb2bc0a752e423c25/?p=QajQPq1hWSf3YVESGW_NZw" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            </div>
                         </div>
+                        <!-- content postgraduate END -->
 
                     </div>
                     <!-- content END -->
