--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                         <p><a href="priem-v-aspiranturu-1.html">Приём в&nbsp;аспирантуру. Правила приема в&nbsp;аспирантуру ФГБУ&nbsp;РИЭПП</a></p>
                         <p><a href="priem-v-aspiranturu-2.html">Приём в&nbsp;аспирантуру. Особенности приема в&nbsp;аспирантуру в&nbsp;2025 году</a></p>
                         <p><a href="applicant.html">Соискателям</a></p>
+                        <p><a href="science.html">Научные направления</a></p>
                     </div>
                     <!-- content END -->
 
